tsk-18: Create service user (#22)
Closes #18

Reviewed-on: https://git.kundeng.us/phoenix/textsender-auth/pulls/22
Co-committed-by: phoenix <kundeng00@pm.me>
