# internal/handler/endpoint/endpoint.go
@@ -3,3 +3,4 @@ package endpoint
 // Endpoint for registering a user
 const Register = "/api/v1/register"
 const Login = "/api/v1/login"
+const CreateServiceUser = "/api/v1/service/register"
